# hanzitransfer

./: .gitignore  CHANGES.md  LICENSE  README.md  cvae_inference.py  front_cnnver2.py  modeltraining4_cnnver.py  modeltraining_cvae.py  pyproject.toml  renderer.py  stroke_dataset.py  testmaking.py  testver.py
.github/workflows/: tests.yml
hanzitransfer/: __init__.py
hanzitransfer/data/: generator.py  testmaking.py
hanzitransfer/fusion/: __init__.py  constraints.py  datasets.py  ids.py  ids_grammar.py  infer_fusion.py  losses.py  metrics.py  sampling.py  train_fusion.py  vector_geom.py  vectorize.py
hanzitransfer/fusion/models/: cond_unet.py
hanzitransfer/inference/: __init__.py  cvae_inference.py  predict.py
hanzitransfer/models/: cnn.py  modeltraining4_cnnver.py
hanzitransfer/ui/: front_cnnver2.py  fusion_tab.py  gui.py
output/: synth_base.txt  synth_target.txt
scripts/: build_pairs.py
tests/: test_cnn.py  test_compose_bitmaps.py  test_constraints.py  test_dataset.py  test_generator.py  test_ids_grammar.py  test_infer_cli.py  test_losses.py  test_render_strokes.py  test_vector_geom.py
