[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzitransfer"
version = "0.1.0"
description = "HanZi style transfer utilities"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Unknown"}]
dependencies = [
    "Pillow",
    "hanzi_chaizi",
    "fontTools",
    "torch",
    "torchvision",
    "numpy",
    "scipy",
    "opencv-python-headless",
    "tqdm"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hanzitransfer"]

[project.scripts]
hanzi-fuse-train = "hanzitransfer.fusion.train_fusion:main"
hanzi-fuse = "hanzitransfer.fusion.infer_fusion:main"
hanzi-ids = "hanzitransfer.fusion.ids:main"

[project.optional-dependencies]
dev = ["pytest", "torch", "torchvision"]
