[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzitransfer"
version = "0.1.0"
description = "HanZi style transfer utilities"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Unknown"}]
dependencies = [
    "Pillow",
    "hanzi_chaizi",
    "fontTools",
    "torch",
    "torchvision",
    "numpy",
    "scipy",
    "opencv-python-headless",
    "tqdm"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hanzitransfer"]

[project.scripts]
hanzi-fuse-train = "hanzitransfer.fusion.train_fusion:main"
hanzi-fuse = "hanzitransfer.fusion.infer_fusion:main"
hanzi-ids = "hanzitransfer.fusion.ids_grammar:main"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "tensorboard"]

[tool.ruff]
select = ["E", "F", "I"]
extend-exclude = ["output/"]
per-file-ignores = {"tests/*.py" = ["E402"]}
line-length = 120

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"
exclude = ["hanzitransfer/fusion/ids.py"]
follow_imports = "skip"
